syntax = "proto3";

package aws.activity;
option go_package = "github.com/CyberAgent/mimosa-aws/proto/activity";

import "activity/entity.proto";
import "validate/validate.proto";

service ActivityService {
  rpc DescribeARN(DescribeARNRequest) returns (DescribeARNResponse);
  rpc ListCloudTrail(ListCloudTrailRequest) returns (ListCloudTrailResponse);
  rpc ListConfigHistory(ListConfigHistoryRequest)
      returns (ListConfigHistoryResponse);
}

message DescribeARNRequest {
  string arn = 1 [ (validate.rules).string.pattern = "^arn:.*$" ];
}

message DescribeARNResponse { ARN arn = 1; }

message ListCloudTrailRequest {
  uint32 project_id = 1 [ (validate.rules).uint32.gt = 0 ];
  uint32 aws_id = 2 [ (validate.rules).uint32.gt = 0 ];
  string region = 3 [ (validate.rules).string.min_len = 1 ];
  // CloudTrail lookup-events API parameters:
  // https://docs.aws.amazon.com/cli/latest/reference/cloudtrail/lookup-events.html

  int64 start_time = 4
      [ (validate.rules).int64 = {gte : 0, lte : 253402268399} ];
  int64 end_time = 5 [ (validate.rules).int64 = {gte : 0, lte : 253402268399} ];
  CloudTrailAttribute attribute = 6;
  string next_token = 7;
}

message ListCloudTrailResponse {
  repeated CloudTrail cloudtrail = 1;
  string next_token = 2;
}

message ListConfigHistoryRequest {
  uint32 project_id = 1 [ (validate.rules).uint32.gt = 0 ];
  uint32 aws_id = 2 [ (validate.rules).uint32.gt = 0 ];
  string region = 3 [ (validate.rules).string.min_len = 1 ];

  // https://docs.aws.amazon.com/cli/latest/reference/configservice/get-resource-config-history.html#options
  string resource_type = 4 [ (validate.rules).string.min_len = 1 ];
  string resource_id = 5 [ (validate.rules).string.min_len = 1 ];
  int64 later_time = 6
      [ (validate.rules).int64 = {gte : 0, lte : 253402268399} ];
  int64 earlier_time = 7
      [ (validate.rules).int64 = {gte : 0, lte : 253402268399} ];
  string chronological_order = 8 [
    (validate.rules).string = {in : [ "Reverse", "Forward", "" ]}
  ];                         // default: Reverse
  string starting_token = 9; // A token to specify where to start paginating.
}

message ListConfigHistoryResponse {
  repeated Configuration configuration = 1;
  string next_token = 2;
}
